<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="9dp"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/article_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/logo_meneame" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="70"
            android:text="@string/placeholder_title"
            android:textSize="14sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
            android:id="@+id/click_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/placeholder_clicks"
            android:textColor="@color/light_gray"
            android:textSize="10sp" />

        <View
            android:id="@+id/click_number_separator"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="8sp"
            android:layout_toRightOf="@id/click_number"
            android:layout_weight="0"
            android:background="@drawable/circle" />

        <TextView
            android:id="@+id/since"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/click_number_separator"
            android:layout_weight="1"
            android:text="@string/placeholder_since"
            android:textColor="@color/light_gray"
            android:textSize="10sp" />
        <TextView
            android:id="@+id/up_votes"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_below="@id/click_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/bordered_rectangle"
            android:text="@string/placeholder_meneos"
            android:textColor="@color/blue_dark"
            android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/title"
            android:text="@string/placeholder_categoria"
            android:textColor="@color/blue_light"
            android:textSize="10sp" />

        <View
            android:id="@+id/sub_separator"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:background="@drawable/circle" />

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/placeholder_via"
            android:textColor="@color/light_gray"
            android:textSize="10sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:background="@drawable/circle" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/placeholder_user"
            android:textColor="@color/light_gray"
            android:textSize="10sp" />
    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>